# open-web-calendar

./: .dockerignore  .gitignore  .pre-commit-config.yaml  .travis.yml  404.html  CNAME  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  Procfile  Procfile.license  README.md  REUSE.toml  SECURITY.md  api.md  app.json  app.json.license  app.py  behave.ini  clean_html.py  conversion_base.py  convert_to_dhtmlx.py  convert_to_ics.py  default_specification.json  default_specification.yml  docs-requirements.in  docs-requirements.txt  features  feed_json_created.json  feed_json_updated.json  feed_rss_created.xml  feed_rss_updated.xml  giscus.json  index.html  mkdocs.test.yml  mkdocs.yml  pip.conf  pyproject.toml  renovate.json  requirements.in  (+9 more)
.github/: CODEOWNERS  FUNDING.yml  dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: azure.yml  buildAndPush.yml  codeql-analysis.yml  docker-image.yml  documentation.yml  master_open-web-calendar.yml  ruff.yml  run-tests.yml  update.yml
.reuse/: dep5
ENV/: pip-selfcheck.json
ENV/include/: python3.6m
SECURITY/: index.html
ar/: index.html
ar/SECURITY/: index.html
ar/changelog/: index.html
ar/contributing/: index.html
ar/dev/: index.html
ar/dunno/: index.html
ar/showcase/: index.html
ar/templates/: index.html
assets/: default_specification.yml
assets/calendars/: christmas.ics  free-busy-events.ics  timezone-example.ics
assets/javascripts/: bundle.13a4f30d.min.js  bundle.1e8ae164.min.js  bundle.3220b9d7.min.js  bundle.50899def.min.js  bundle.5090c770.min.js  bundle.525ec568.min.js  bundle.56ea9cef.min.js  bundle.60a45f97.min.js  bundle.79ae519e.min.js  bundle.83f73b43.min.js  bundle.88dd0f4e.min.js  bundle.92b07e13.min.js  bundle.c8b220af.min.js  bundle.d6f25eb3.min.js  bundle.d7400e89.min.js  bundle.e71a0d61.min.js  bundle.f13b1293.min.js  bundle.f1b6f286.min.js  bundle.f55a23d4.min.js
assets/templates/: caldav-signup.json  christmas-day.json  family-planning.json  free-and-busy.json  rooms.json  timezone-example.json
be/: index.html
be/SECURITY/: index.html
be/changelog/: index.html
be/contributing/: index.html
be/dev/: index.html
be/dunno/: index.html
be/showcase/: index.html
be/templates/: index.html
blog/: index.html
ca/: index.html
ca/SECURITY/: index.html
ca/changelog/: index.html
ca/contributing/: index.html
ca/dev/: index.html
ca/dunno/: index.html
ca/showcase/: index.html
ca/templates/: index.html
changelog/: index.html
contributing/: index.html
cs/: index.html
cs/SECURITY/: index.html
cs/changelog/: index.html
cs/contributing/: index.html
cs/dev/: index.html
cs/dunno/: index.html
cs/showcase/: index.html
cs/templates/: index.html
cy/: index.html
cy/SECURITY/: index.html
cy/changelog/: index.html
cy/contributing/: index.html
cy/dev/: index.html
cy/dunno/: index.html
cy/showcase/: index.html
cy/templates/: index.html
da/: index.html
da/SECURITY/: index.html
da/changelog/: index.html
da/contributing/: index.html
da/dev/: index.html
da/dunno/: index.html
da/showcase/: index.html
da/templates/: index.html
de/: index.html
de/SECURITY/: index.html
de/changelog/: index.html
de/contributing/: index.html
de/dev/: index.html
de/dunno/: index.html
de/showcase/: index.html
de/templates/: index.html
dev/: index.html
dev/api/: index.html
dev/javascript/: index.html
dev/license/: index.html
docker/: constraints.txt  start-service.sh
docs/: Makefile  _languages.yml  changelog.md  conf.py  contributing.md  dunno.md  index.de.md  index.md  make.bat  reference.md  templates.md
dunno/: index.html
el/: index.html
en/: index.html
eo/: index.html
es/: index.html
features/: calendar.feature  categories.feature  configure-the-calendar.feature  correct-event-times.feature  edit-the-calendar.feature  environment.py  issue-152-encoding-of-description.feature  issue-165-block-malicious-content.feature  issue-207-change-hour-format.feature  issue-213-choose-time-zone.feature  issue-258-work-week.feature  issue-300-use-html-description.feature  issue-305-event-css-classes.feature  issue-388-url-field-as-link.feature  issue-51-start-end-end-times.feature  language.feature  open-links-location.feature  select-tabs-and-control-buttons.feature
fi/: index.html
fr/: index.html
he/: index.html
hooks/: set_canonical_url.py
hr/: index.html
hu/: index.html
id/: index.html
index.de/: index.html
is/: index.html
it/: index.html
ja/: index.html
js/: clipboard.min.js.license  tippy.js.license
kab/: index.html
ko/: index.html
ko_LAVA/: index.html
nb_NO/: index.html
nl/: index.html
open_web_calendar/: __init__.py  __main__.py  app.py  calendars.py  clean_html.py  config.py  conversion_base.py  convert_to_dhtmlx.py  convert_to_ics.py  convert_to_metadata.py  default_specification.yml  encryption.py  error.py  new_key.py  translate.py  url.py  util.py  version.py
pl/: index.html
pt/: index.html
requirements/: base.in  base.txt  dev.in  dev.txt  docs.in  docs.txt  test.in  test.txt
ro/: index.html
ru/: index.html
scripts/: check-links-in-documentation.sh  dev  find-translated-documentation-languages.sh  make-sure-weblate-can-use-the-translation-files.sh  test-spelling.sh  update-scheduler.sh  who-translated.sh
showcase/: index.html
si/: index.html
sk/: index.html
static/: index.html
support/: index.html
sv/: index.html
ta/: index.html
templates/: 403.html  about.html  index.html  locale.js
test/: conftest.py  test_clean.py  test_date_to_string.py  test_issue_241_mime_type_for_js.py  test_issue_300_html_description.py  test_issue_305_event_style.py  test_issue_308_alternate_link_to_ics.py  test_issue_309_extract_ics_feed.py  test_issue_71_add_javascript.py  test_specfication.py  test_special_timezones.py  test_specification.py  test_translations.py  test_url_cache.py
test_ics/: diacritics.ics
th/: index.html
tr/: index.html
uk/: index.html
zh_Hans/: index.html
zh_Hant/: index.html
(+2497 files in other folders)
